--- a/window_0711/templates/base.html.jinja
+++ b/window_0711/templates/base.html.jinja
@@ -38,18 +38,9 @@
         </div>
       </div>
     </nav>
-    <main class="container text-center">
-    
-      <div class="row">
-        <div class="col-4" style="background-color:#e5e591">
-          {% block left_content%}
-          {% endblock %}
-        </div>
-        <div class="col-8" style="background-color:#f3cc9c">
-          {% block right_content%}
-          {% endblock %}
-        </div>
-      </div>
+    <main>
+      {% block main%}
+      {% endblock %}
     </main>
   </div>
 </body>
