--- a/window_0730/templates/auth/login.html.jinja
+++ b/window_0730/templates/auth/login.html.jinja
@@ -6,8 +6,15 @@
 {% block main %}
 <h1>登入</h1>
 <form method="post">
-    <div>帳號email</div>
-    <div>密碼password</div>
-    <input type="submit" value="確定">
+    {{form.csrf_token}}
+    <div class="mb-3">
+        {{form.email.label(class="from-label")}}
+        {{form.email(class="from-control",size=30,minlength=4,maxlength=30)}}
+    </div>
+    <div class="mb-3">
+        {{form.password.label(class="from-label")}}
+        {{form.password(class="from-control",size=30,minlength=4,maxlength=30)}}
+    </div>
+    <input type="submit" value="確定" class="btn btn-primary">
 </form>
 {% endblock  %}
